# BrainSprout_v1

./: .dockerignore  Dockerfile  README.md  docker-compose.ec2.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/models/: vector_store.py
app/services/: llm_service.py  storage_service.py
app/vector_db/14d30b3c-3fe1-497d-9687-0da90c4a211c/: index_metadata.pickle
